wescamp.py: Update from add-on server

--- a/The_Founding_of_Borstep/_main.cfg
+++ b/The_Founding_of_Borstep/_main.cfg
@@ -13,6 +13,7 @@
     abbrev= _ "TFoB"
     rank=300
     first_scenario=New_Leader
+    extra_defines=ENABLE_DWARVISH_RUNESMITH,ENABLE_DWARVISH_ARCANISTER
     difficulties=EASY,NORMAL,HARD,NIGHTMARE
     difficulty_descriptions={MENU_IMG_TXT2 "units/orcs/grunt.png~RC(magenta>red)"( _ "Grunt") ( _ "(Normal)")} + ";" +
     {MENU_IMG_TXT2 "units/orcs/warrior.png~RC(magenta>red)" ( _ "Warrior") ( _ "(Challenging)")} + ";" +
