--- a/The_Founding_of_Borstep/scenarios/05_Fort_Narig.cfg
+++ b/The_Founding_of_Borstep/scenarios/05_Fort_Narig.cfg
@@ -47,7 +47,7 @@
 	id=Fort_Narig
 	next_scenario=Guarded_Door
 
-	turns=30
+	{TURNS4 30 31 32 34}
 	victory_when_enemies_defeated=no
 	{DEFAULT_SCHEDULE}
 	{PLAYLIST}
@@ -249,32 +249,6 @@
 			name=orc_villages
 		[/clear_variable]
 		
-		# All fort hexes except the recruiting ones get a goblin. The goblin's
-		# level depends on the difficulty:
-#ifdef EASY
-				[set_variable]
-					name=unit_type
-					value=Goblin Spearman
-				[/set_variable]
-#endif
-#ifdef NORMAL
-				[set_variable]
-					name=unit_type
-					value=Goblin Spearman
-				[/set_variable]
-#endif
-#ifdef HARD
-				[set_variable]
-					name=unit_type
-					rand=Goblin Spearman,Goblin Impaler
-				[/set_variable]
-#endif
-#ifdef NIGHTMARE
-				[set_variable]
-					name=unit_type
-					value=Goblin Impaler
-				[/set_variable]
-#endif
 
 		[store_locations]
 			terrain=Co
@@ -286,6 +260,32 @@
 		[/store_locations]
 		
 		{FOREACH orc_fort_wall fort}
+		# All fort hexes except the recruiting ones get a goblin. The goblin's
+		# level depends on the difficulty:
+#ifdef EASY
+			[set_variable]
+				name=unit_type
+				value=Goblin Spearman
+			[/set_variable]
+#endif
+#ifdef NORMAL
+			[set_variable]
+				name=unit_type
+				value=Goblin Spearman
+			[/set_variable]
+#endif
+#ifdef HARD
+			[set_variable]
+				name=unit_type
+				rand=Goblin Spearman,Goblin Impaler
+			[/set_variable]
+#endif
+#ifdef NIGHTMARE
+			[set_variable]
+				name=unit_type
+				rand=Goblin Spearman,Goblin Impaler,Goblin Impaler
+			[/set_variable]
+#endif
 			[unit]
 				side=2
 				x=$orc_fort_wall[$fort].x
